--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,28 +19,62 @@ body {
   margin-bottom: 16px;
 }
 
-.added_list {
-  list-style: none;
+.search-form {
   display: flex;
-  gap: 15px;
+  gap: 20px;
   align-items: center;
+  justify-content: center;
+  height: 40px;
+  margin-bottom: 20px;
+  background-color: blue;
 }
 
-.flag {
-  width: 50px;
-  height: 50px;
-}
-
-.flag_small {
-  width: 50px;
-}
-
-.name_flag{
+.gallery {
   display: flex;
-  gap: 15px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.list_options {
-  list-style: none;
+.photo-card {
+  flex-basis: calc((100% - 30px) / 4);
+  margin-bottom: 20px;
 }
 
+.photo-card {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+img {
+  width: 100%;
+}
+
+.info {
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  font-size: 10px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.info-item {
+  width: calc(100% / 4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+}
+
+.load-more {
+  display: block;
+  margin: 0 auto;
+  width: 80px;
+  height: 20px;
+  background: blue;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
