--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,16 +20,34 @@ body {
 }
 
 .search-form {
+  
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  height: 80px;
   margin-bottom: 20px;
-  background-color: blue;
+  background-color: rgb(43, 146, 151);
 }
 
+.search-form_input {
+  padding-left: 10px;
+border-radius: 10px;
+height: 30px;
+border: none;
+width: 200px;
+
+}
+
+.submit-button { 
+  border-radius: 10px;
+    height: 30px;
+    border: none;
+}
 .gallery {
+   margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -73,7 +91,7 @@ img {
   margin: 0 auto;
   width: 80px;
   height: 20px;
-  background: blue;
+  background: rgb(99, 184, 181);
   color: white;
   border: none;
   border-radius: 4px;
